--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -505,6 +505,8 @@ function saveGrade(userId, grade) {
 // Carrega as perguntas ao carregar a página
 window.onload = loadQuestions;
 
+</script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
