--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -22,6 +22,21 @@
             margin-bottom: 20px;
         }
  
+.back-btn {
+    background-color: #4CAF50; /* Cor verde consistente com outros botões */
+    color: white;
+    padding: 10px 20px;
+    font-size: 1em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.back-btn:hover {
+    background-color: #45a049; /* Efeito hover consistente */
+}
+
 /* Estilos de nota simplificados */
     .grade-style, .grade-style-red {
         text-align: center;
@@ -147,9 +162,9 @@
     </style>
 </head>
 <body>
-<button onclick="window.history.back()" style="padding: 10px 20px; font-size: 1em; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">
-    Back
-</button>
+<div class="btn-group">
+    <button class="back-btn" onclick="window.history.back()">Back</button>
+</div>
 
 <h1>Hannah Test</h1>
 
