--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -301,6 +301,8 @@ async function loadQuestions() {
         const { level, unit } = getParamsFromURL();
         const questionFilePath = `../../../../${level}/${unit}/DataTestQuizLeVeAB/questions.txt`;
 
+        console.log("Loading questions from:", questionFilePath); // Log para depuração
+
         const response = await fetch(questionFilePath);
         if (!response.ok) throw new Error("Failed to load questions");
 
@@ -326,12 +328,25 @@ async function loadQuestions() {
 
         if (questions.length === 0) throw new Error("No valid questions found");
 
+        console.log("Questions loaded successfully:", questions); // Verifica o carregamento
         answeredQuestions = new Array(questions.length).fill(false);
         totalQuestions = questions.length;
         displayQuestion();
     } catch (error) {
         handleError(error.message);
     }
+}
+
+function readQuestion() {
+    if (!questions.length) {
+        alert("No questions loaded to read.");
+        return;
+    }
+
+    const questionText = questions[currentQuestionIndex].question;
+    const utterance = new SpeechSynthesisUtterance(questionText);
+    utterance.lang = "en-US"; // Definir o idioma para inglês
+    speechSynthesis.speak(utterance);
 }
 
 // Função para exibir a questão atual
