--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -389,16 +389,30 @@ function displayQuestion() {
 
 // Navegação entre perguntas
 function showNextQuestion() {
+    if (questions.length === 0) {
+        alert("No questions loaded.");
+        return;
+    }
     if (currentQuestionIndex < questions.length - 1) {
         currentQuestionIndex++;
+        console.log("Next Question Index:", currentQuestionIndex);
         displayQuestion();
+    } else {
+        alert("This is the last question.");
     }
 }
 
 function showPreviousQuestion() {
+    if (questions.length === 0) {
+        alert("No questions loaded.");
+        return;
+    }
     if (currentQuestionIndex > 0) {
         currentQuestionIndex--;
+        console.log("Previous Question Index:", currentQuestionIndex);
         displayQuestion();
+    } else {
+        alert("This is the first question.");
     }
 }
 
