--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -351,40 +351,40 @@ function readQuestion() {
 
 // Função para exibir a questão atual
 function displayQuestion() {
+    if (!questions || questions.length === 0) {
+        console.error("No questions available to display.");
+        document.getElementById("quiz-container").innerHTML = "<p>No questions loaded.</p>";
+        return;
+    }
+
+    if (currentQuestionIndex < 0 || currentQuestionIndex >= questions.length) {
+        console.error("Invalid question index:", currentQuestionIndex);
+        return;
+    }
+
     const container = document.getElementById("quiz-container");
     container.innerHTML = "";
 
-    const { level, unit } = getParamsFromURL();
-    const questionImagePath = `../../../../${level}/${unit}/DataTestQuizLeVeAB/images/imagem${currentQuestionIndex + 1}.png`;
-
     const q = questions[currentQuestionIndex];
+
+    // Exibição do texto e imagem da pergunta
     const questionDiv = document.createElement("div");
     questionDiv.classList.add("question");
 
-    // Adiciona a imagem da questão
-    const questionImage = document.createElement("img");
-    questionImage.src = questionImagePath;
-    questionImage.alt = `Imagem para a questão ${currentQuestionIndex + 1}`;
-    questionImage.style.width = "100%";
-    questionImage.style.maxHeight = "300px";
-    questionDiv.appendChild(questionImage);
-
-    // Adiciona o texto da questão
     const questionText = document.createElement("p");
     questionText.id = "question-text";
     questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
     questionDiv.appendChild(questionText);
 
-    // Adiciona as opções de resposta
     q.answers.forEach((answer) => {
         const answerLabel = document.createElement("label");
-        const isChecked = selectedAnswers[currentQuestionIndex] === answer[0];
-        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="selectAnswer('${answer[0]}')" ${isChecked ? "checked" : ""}> ${answer}`;
+        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="selectAnswer('${answer[0]}')"> ${answer}`;
         questionDiv.appendChild(answerLabel);
     });
 
     container.appendChild(questionDiv);
-    updateNavigationButtons();
+
+    updateNavigationButtons(); // Atualiza os botões
 }
 
 // Navegação entre perguntas
@@ -417,8 +417,14 @@ function showPreviousQuestion() {
 }
 
 function updateNavigationButtons() {
-    document.getElementById("prev-btn").disabled = currentQuestionIndex === 0;
-    document.getElementById("next-btn").disabled = currentQuestionIndex === questions.length - 1;
+    const prevBtn = document.getElementById("prev-btn");
+    const nextBtn = document.getElementById("next-btn");
+
+    prevBtn.disabled = currentQuestionIndex === 0;
+    nextBtn.disabled = currentQuestionIndex === questions.length - 1;
+
+    console.log("Previous button disabled:", prevBtn.disabled);
+    console.log("Next button disabled:", nextBtn.disabled);
 }
 
 // Verificação de respostas
