--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -172,8 +172,8 @@
 
 <div class="btn-group">
     <button class="read-btn" id="read-btn" onclick="readQuestion()">Read</button>
-    <button class="prev-btn" id="prev-btn" onclick="stopReading(); showPreviousQuestion()">Previous</button>
-    <button class="next-btn" id="next-btn" onclick="stopReading(); showNextQuestion()">Next</button>
+ <button class="prev-btn" id="prev-btn" onclick="stopReading(); showPreviousQuestion()">Previous</button>
+<button class="next-btn" id="next-btn" onclick="stopReading(); showNextQuestion()">Next</button>
 </div>
 
 <div id="quiz-container" class="question-container"></div>
@@ -385,6 +385,13 @@ function displayQuestion() {
     container.appendChild(questionDiv);
 
     updateNavigationButtons(); // Atualiza os botões
+}
+
+function stopReading() {
+    if (speechSynthesis.speaking || speechSynthesis.pending) {
+        speechSynthesis.cancel();
+        console.log("Speech synthesis stopped.");
+    }
 }
 
 // Navegação entre perguntas
