--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -351,40 +351,52 @@ function readQuestion() {
 
 // Função para exibir a questão atual
 function displayQuestion() {
-    if (!questions || questions.length === 0) {
-        console.error("No questions available to display.");
-        document.getElementById("quiz-container").innerHTML = "<p>No questions loaded.</p>";
-        return;
-    }
-
-    if (currentQuestionIndex < 0 || currentQuestionIndex >= questions.length) {
-        console.error("Invalid question index:", currentQuestionIndex);
-        return;
-    }
-
     const container = document.getElementById("quiz-container");
     container.innerHTML = "";
 
+    if (!questions || questions.length === 0) {
+        console.error("No questions available to display.");
+        container.innerHTML = "<p>No questions loaded.</p>";
+        return;
+    }
+
     const q = questions[currentQuestionIndex];
 
-    // Exibição do texto e imagem da pergunta
     const questionDiv = document.createElement("div");
     questionDiv.classList.add("question");
 
+    // Adiciona a imagem
+    const { level, unit } = getParamsFromURL();
+    const questionImagePath = `../../../../${level}/${unit}/DataTestQuizLeVeAB/images/imagem${currentQuestionIndex + 1}.png`;
+    console.log("Image path:", questionImagePath); // Log para depuração
+
+    const questionImage = document.createElement("img");
+    questionImage.src = questionImagePath;
+    questionImage.alt = `Image not found for question ${currentQuestionIndex + 1}`;
+    questionImage.onerror = function () {
+        console.error(`Image not found: ${questionImagePath}`);
+        questionImage.src = "../../../imagens/placeholder.png"; // Imagem padrão
+    };
+    questionImage.style.width = "100%";
+    questionImage.style.maxHeight = "300px";
+    questionDiv.appendChild(questionImage);
+
+    // Adiciona o texto da questão
     const questionText = document.createElement("p");
     questionText.id = "question-text";
     questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
     questionDiv.appendChild(questionText);
 
+    // Adiciona as opções de resposta
     q.answers.forEach((answer) => {
         const answerLabel = document.createElement("label");
-        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="selectAnswer('${answer[0]}')"> ${answer}`;
+        const isChecked = selectedAnswers[currentQuestionIndex] === answer[0];
+        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="selectAnswer('${answer[0]}')" ${isChecked ? "checked" : ""}> ${answer}`;
         questionDiv.appendChild(answerLabel);
     });
 
     container.appendChild(questionDiv);
-
-    updateNavigationButtons(); // Atualiza os botões
+    updateNavigationButtons();
 }
 
 function stopReading() {
