--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -417,7 +417,8 @@ function showNextQuestion() {
         console.log("Next Question Index:", currentQuestionIndex);
         displayQuestion();
     } else {
-        alert("This is the last question.");
+        console.log("End of phase reached.");
+        checkCompletion(); // Chama a função de conclusão
     }
 }
 
